# Free-LLM-API

./: .env.example  Overview.py  README.md  open_router.py  pyproject.toml  shared_components.py
.specstory/history/: 2025-04-03_01-17-model-filtering-and-data-display-features.md  2025-04-03_06-24-refactoring-huggingface-code-structure.md  2025-04-03_06-29-image-processing-script-with-ui-integration.md  2025-04-03_07-09-refining-hugging-face-model-retrieval-script.md  2025-04-03_07-49-hugging-face-api-quota-inquiry.md  2025-04-03_08-28-api-pricing-inquiry-for-openrouter.md  2025-04-03_08-54-image-to-image-model-and-resource-inquiry.md  2025-04-03_09-10-checking-task-existence-and-listing-providers.md
pages/: 0_text_->_text.py  10_HuggingFace_models.py  11_Quota.py  1_text_+_image_->_text.py  2_text_+_image_->_image.py  3_text_->_image.py  4_image_->_image.py  9_OpenRouter_models.py
