[project]
name = "free-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "huggingface-hub>=0.30.1",
    "ipdb>=0.13.13",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]
